# bsread_cpp

./: .gitignore  .gitmodules  .project  CHANGELOG  CMakeLists.txt  GNUmakefile  MODULE  Makefile  NotesProtocolBuffers.md  Readme.md  bsread.template  bsread_evr.cmd  bsread_plain.cmd  bsread_sim.cmd  bsread_storesend.cmd  bsread_test.sh  crlogic.template  install_templates.sh
App/config/medm/: G_CRLOGIC_expert.adl  bsread.adl
configure/: CONFIG_SITE.win32-x86  RELEASE.win32-x86  RELEASE.windows-x64
doc/: EXAMPLE_bsread.subs  EXAMPLE_crlogic.subs  EXAMPLE_start_seq.script  EXAMPLE_startup.script
example/: startup_evr.cmd  startup_noevr.cmd  startup_sim.cmd
ioc/: O.3.14.12_SL6-x86_64  README.md  bsdaq.substitutions  bsread.subs  bsread.template  bsread_test.template  bsreadtest.subs  bsreadtest.substitutions  bsreadtest.template  example.startup  install.sh  makeioc.sh  readme.md  records.db  startup.script
ioc/dbd/: .gitignore
ioc/templates/: bsread.startup  bsread.template  bsread_sim.startup
ioc_manual/: Readme.md  bsread.subs  bsread.template  bsread_test.subs
ioc_simple/: README.md  bsread_test.template  example.startup  install.sh
ioc_simple/template/: bsread.startup  bsread.template  bsread_sim.template
python/: bsdaqZmq.py  bunchData_pb2.py
src/: BSDataChannel.cpp  BSDataChannel.h  BSDataMessage.cpp  BSDataMessage.h  BSDataSenderZmq.cpp  BSDataSenderZmq.h  BSREAD.dbd  BufferDataProvider.cpp  BufferDataProvider.h  CacheManager.cpp  CacheManager.h  CachedDataProvider.cpp  CachedDataProvider.h  Channel.cpp  Channel.h  DataProvider.h  DirectDataProvider.cpp  DirectDataProvider.h  Makefile  Message.cpp  Message.h  Receiver.h  Sender.cpp  Sender.h  ZeroCopySender.cpp  ZeroCopySender.h  asubBsdaq.cc  asubConfigure.c  asubRead.c  asub_routines.cc  bsdaq.cpp  bsdaq.h  bsdaqMain.cpp  bsdata.cc  bsdata.h  bsread.c  bsread.cc  bsread.dbd  bsread.h  bsread.org  (+29 more)
src/CRLOGICChannel/: Makefile  crlogicResourceChannel.c
src/CRLOGICCore/: Makefile  crlogic.c  crlogicDataWriterTXT.c  crlogicDataWriterTXT.cpp
src/CRLOGICDCR508/: Makefile  crlogicResourceDCR508.c
src/CRLOGICECM5xx/: Makefile  crlogicResourceECM5xx.c
src/CRLOGICHy8001Trigger/: Makefile  crlogicResourceHy8001Trigger.c
src/CRLOGICHy8401/: Makefile  crlogicResourceHy8401.c
src/CRLOGICMaxV/: Makefile  crlogicResourceMaxV.c
src/CRLOGICTimestamp/: Makefile  crlogicResourceTimestamp.c
src/CRLOGICVME58/: Makefile  crlogicResourceVME58.c
src/CRLOGICVME58E/: Makefile  crlogicResourceVME58E.c
src/CRLOGICVSC16/: Makefile  crlogicResourceVSC16.c
src/bsdata_example/: CMakeLists.txt  Readme.md  example.cpp  memtest.c  performance_test.cpp  performance_test.h  sconf.h  utils.h
src/bsread_example/: CMakeLists.txt  example.cpp
src/test_app/: CMakeLists.txt  readme.md  test_app.cpp  utils.h
templates/: bsread.template  bsread_evr.template  bsread_sim.template  bsread_storesend.template
templates/bsread_evr/: startup.cmd
test/: COSYLAB-228.sh  COSYLAB-245.sh  COSYLAB-246.sh  COSYLAB-247.sh
tests/: CMakeLists.txt  DummyReceiver.cpp  DummyReceiver.h  Receiver.cpp  Receiver.h  test_Channel.cpp  test_Receiver.cpp  test_Sender.cpp  test_ZeroCopySender.cpp  test_compression.cpp  test_data_providers.cpp  test_main.cpp
util/: bsdaqZmq.py  test.sh
utils/: dbl_bsconfig.py
